add random colour drawing function

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <body>
   <h1>Etch-a-Sketch</h1>
   <button class="sizeBttn">Change Box Size</button>
+  <button id="rainbow">Rainbow(random colour)</button>
 </body>
 </html>
