add draw when mouse is held down, remove draw on hover

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="stylesheet.css" rel="stylesheet">
   <script src="draw.js" defer></script>
 </head>
-<body>
+<body ondragstart="return false;" ondrop="return false;">
   <h1>Etch-a-Sketch</h1>
   <button class="sizeBttn">Change Box Size</button>
   <button id="rainbow">Rainbow(random colour)</button>
